@@ -126,6 +126,7 @@ public Q_SLOTS:
     void updateRows();
     void updateRows(const QModelIndex &idx);
     void backActivated();
+    void setExpanded(const QModelIndex &idx, bool exp=true);
 
 Q_SIGNALS:
     void searchItems();
