@@ -124,6 +124,7 @@
 73. Add extra option to filescheme dialog - "Track Artist (+Title)". This is
     intended to be used with Various Artist albums - so that the filename can
     also contain the track arist, if this is different to the album artist.
+74. Expand device when connected.
 
 0.9.2
 -----
